Change frontpage layout to be more attractive to users (some things still need tweaking like the main image now in finnish only)

--- a/src/components/application.html
+++ b/src/components/application.html
@@ -1,6 +1,6 @@
 <div ng-show="ctrl.applicationInitialized">
   <navigation-bar></navigation-bar>
-  <breadcrumb></breadcrumb>
+  <breadcrumb ng-class="['iow-breadcrumb', { 'with-breadcrumb': ctrl.showFooter }]"></breadcrumb>
   <div ng-class="['main', { 'with-footer': ctrl.showFooter }]" ng-view></div>
   <footer ng-if="ctrl.showFooter"></footer>
   <google-analytics ng-if="ctrl.production"></google-analytics>
