Minor fix to previous commit

--- a/src/components/group/group.html
+++ b/src/components/group/group.html
@@ -26,7 +26,7 @@
           <non-editable data-title="Internal group page" value="ctrl.group.homepage" link="ctrl.group.homepage" context="ctrl.group"></non-editable>
         </div>
 
-        <div class="col-md-5 col-md-offset-1">
+        <div class="col-md-5">
           <div class="group-panel">
             <div class="iow-panel-heading"><h2 translate>Models</h2></div>
             <div class="panel-body">
