Revert previous changes, let's required changes see later

--- a/src/components/group/group.html
+++ b/src/components/group/group.html
@@ -14,7 +14,7 @@
           <button type="button" class="btn btn-default right" ng-click="ctrl.addModel('profile')" ng-if="ctrl.canAddModel()" translate>Add profile</button>
         </editable-entity-buttons>
 
-        <div class="col-md-3">
+        <div class="col-md-5">
           <editable data-title="Group label" context="ctrl.group">
             <input id="groupLabel" class="form-control" type="text" localized-input="label" context="ctrl.group" ng-model="ctrl.editableInEdit.label" />
           </editable>
@@ -26,7 +26,7 @@
           <non-editable data-title="Internal group page" value="ctrl.group.homepage" link="ctrl.group.homepage" context="ctrl.group"></non-editable>
         </div>
 
-        <div class="col-md-5">
+        <div class="col-md-5 com-md-offset-1">
           <div class="group-panel">
             <div class="iow-panel-heading"><h2 translate>Models</h2></div>
             <div class="panel-body">
