Require front page image

--- a/src/components/frontPage.html
+++ b/src/components/frontPage.html
@@ -63,7 +63,7 @@
     <div class="col-md-1"></div>
     <div class="col-md-5">
       <div>
-        <img src="../../assets/iow_etusivu_kuva.png" />
+        <img ng-src="{{ctrl.frontPageImage}}" />
       </div>
     </div>
   </div>
