--- a/src/components/editor/classForm.html
+++ b/src/components/editor/classForm.html
@@ -2,7 +2,7 @@
 
 <div class="row">
   <div class="col-md-6">
-    <editable data-title="{{ctrl.class.normalizedType + ' label' | capitalize}}" context="ctrl.model" autofocus>
+    <editable data-title="{{ctrl.class.normalizedType + ' label' | capitalize}}" context="ctrl.model" autofocus="ctrl.shouldAutofocus">
       <input id="classLabel" class="form-control" type="text" localized-input="label" context="ctrl.model" ng-model="ctrl.class.label"/>
     </editable>
   </div>
