--- a/src/components/editor/subjectView.html
+++ b/src/components/editor/subjectView.html
@@ -4,7 +4,6 @@
 </div>
 
 <div ng-if="ctrl.subject" class="model-view__sub row">
-  <non-editable class="col-md-4" data-title="Concept id" value="ctrl.subject.id.uri" link="ctrl.subject.id.url" context="ctrl.context"></non-editable>
-  <non-editable class="col-md-3" data-title="Concept label" value="ctrl.subject.label" context="ctrl.context"></non-editable>
-  <non-editable class="col-md-5" data-title="Definition" value="ctrl.subject.comment" context="ctrl.context"></non-editable>
+  <non-editable class="col-md-6" data-title="Concept label" value="ctrl.subject.label" link="ctrl.link" context="ctrl.context"></non-editable>
+  <non-editable class="col-md-6" data-title="Definition" value="ctrl.subject.comment" context="ctrl.context"></non-editable>
 </div>
