--- a/src/components/editor/classForm.html
+++ b/src/components/editor/classForm.html
@@ -86,13 +86,17 @@
 <div class="row">
   <div class="col-md-6">
     <non-editable data-title="Created at" value="ctrl.class.createdAt" context="ctrl.model"></non-editable>
-
-    <editable data-title="Editorial note" context="ctrl.model">
-      <textarea id="editorialNote" class="form-control" localized-input="free" context="ctrl.model" ng-model="ctrl.class.editorialNote"></textarea>
-    </editable>
   </div>
   <div class="col-md-6">
     <non-editable data-title="Modified at" value="ctrl.class.modifiedAt" context="ctrl.model"></non-editable>
+  </div>
+</div>
+
+<div class="row">
+  <div class="col-md-12">
+    <editable data-title="Editorial note" context="ctrl.model">
+      <textarea id="editorialNote" class="form-control" localized-input="free" context="ctrl.model" ng-model="ctrl.class.editorialNote"></textarea>
+    </editable>
   </div>
 </div>
 
