Change frontpage image from png into svg

--- a/src/components/frontPage.html
+++ b/src/components/frontPage.html
@@ -60,10 +60,9 @@
         </blockquote>
       </div>
     </div>
-    <div class="col-md-1"></div>
-    <div class="col-md-5">
+    <div class="col-md-6">
       <div>
-        <img ng-src="{{ctrl.frontPageImage}}" />
+        <img id="frontpage-image" ng-src="{{ctrl.frontPageImage}}" />
       </div>
     </div>
   </div>
