--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -1141,6 +1141,10 @@ a.accordion-toggle {
   }
 }
 
+#frontpage-image {
+  max-height: 540px;
+}
+
 .main-functions-row {
   padding-top: 30px;
   padding-bottom: 30px;
