Change css logo into svg logo

--- a/src/components/navigation/navigationBar.html
+++ b/src/components/navigation/navigationBar.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-default">
   <div class="navbar-header">
-    <a class="navbar-brand" ng-href="#/"><div class="hexagon"></div>{{'IOW' | translate}}</a>
+    <div><a class="" ng-href="#/"><img id="logo-image" ng-src="{{ctrl.logoImage}}" /></a></div><div><span>{{'IOW' | translate}}</span></div>
   </div>
 
   <ul class="nav navbar-nav navbar-right">
