--- a/src/styles/loading.scss
+++ b/src/styles/loading.scss
@@ -1,5 +1,10 @@
 @import "../../node_modules/please-wait/build/please-wait.css";
 
+img.pg-loading-logo {
+  max-width: 40px;
+  max-height: 40px;
+}
+
 .pg-loading-html {
 
   margin-top: 30px !important;
