Fix svg image styles for ie

--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -1152,7 +1152,7 @@ a.accordion-toggle {
 }
 
 #frontpage-image {
-  max-height: 540px;
+  height: 540px;
 }
 
 .main-functions-row {
@@ -1162,8 +1162,8 @@ a.accordion-toggle {
 }
 
 #logo-image {
-  min-width: 40px;
-  max-width: 40px;
+  width: 40px;
+  height: 40px;
   margin-left: 15px;
 }
 
