Fix svg image styles for ie

--- a/src/styles/loading.scss
+++ b/src/styles/loading.scss
@@ -1,8 +1,8 @@
 @import "../../node_modules/please-wait/build/please-wait.css";
 
 img.pg-loading-logo {
-  max-width: 40px;
-  max-height: 40px;
+  width: 40px;
+  height: 40px;
 }
 
 .pg-loading-html {
