--- a/src/components/editor/editableReferenceDataSelect.html
+++ b/src/components/editor/editableReferenceDataSelect.html
@@ -1,16 +1,14 @@
-<div ng-if="ctrl.referenceData || ctrl.isEditing()" class="editable-wrap">
+<div ng-if="ctrl.referenceData.length > 0 || ctrl.isEditing()" class="editable-wrap">
   <div>
     <editable-label data-title="'Reference data'"></editable-label>
-    <div ng-hide="ctrl.referenceData" translate>Not defined</div>
+    <div ng-show="ctrl.referenceData.length === 0" translate>Not defined</div>
   </div>
 
-  <div ng-if="ctrl.referenceData" class="model-view__sub row">
-    <non-editable class="col-md-5" title="Reference data name" value="ctrl.referenceData.title" context="ctrl.model" on-click="ctrl.browse()"></non-editable>
-    <non-editable class="col-md-7" title="Description" value="ctrl.referenceData.description" context="ctrl.model"></non-editable>
+  <div ng-if="ctrl.referenceData.length > 0" class="model-view__sub row">
+    <editable-table descriptor="ctrl.descriptor" values="ctrl.referenceData" expanded="ctrl.expanded"></editable-table>
   </div>
 
   <div ng-class="{'model-view__sub': !!ctrl.referenceData}" style="margin-bottom: 15px">
-    <button ng-if="ctrl.isEditing()" type="button" class="btn btn-default btn-sm" ng-click="ctrl.selectReferenceData()" translate>Choose reference data</button>
-    <button ng-show="ctrl.isEditing() && ctrl.referenceData" type="button" class="btn btn-default btn-sm" ng-click="ctrl.removeReferenceData()" translate>Clear selection</button>
+    <button ng-if="ctrl.isEditing()" type="button" class="btn btn-default btn-sm" ng-click="ctrl.addReferenceData()" translate>Add reference data</button>
   </div>
 </div>
