--- a/src/components/editor/classView.html
+++ b/src/components/editor/classView.html
@@ -8,7 +8,7 @@
             <span class="glyphicon glyphicon-plus"></span>
             <span translate>Add property</span>
           </button>
-          <export ng-hide="ctrl.isEditing()" entity="ctrl.class"></export>
+          <export ng-hide="ctrl.isEditing()" entity="ctrl.class" context="ctrl.model"></export>
           <history model="ctrl.model" resource="ctrl.class" ng-hide="ctrl.isEditing()"></history>
           <editable-state-select class="pull-right" ng-if="!ctrl.editableInEdit.unsaved" id="classState" state="ctrl.editableInEdit.state" model="ctrl.model"></editable-state-select>
         </selection-buttons>
