--- a/src/components/editor/predicateView.html
+++ b/src/components/editor/predicateView.html
@@ -4,7 +4,7 @@
       <selection-view model="ctrl.model" editable-controller="ctrl" show="ctrl.show">
         <selection-buttons>
           <a class="btn btn-default right" ng-show="ctrl.canAskForRights()" ng-href="{{ctrl.getGroup().homepage}}" target="_blank" translate>Ask for group rights</a>
-          <export ng-hide="ctrl.isEditing()" entity="ctrl.predicate"></export>
+          <export ng-hide="ctrl.isEditing()" entity="ctrl.predicate" context="ctrl.model"></export>
           <history model="ctrl.model" resource="ctrl.predicate" ng-hide="ctrl.isEditing()"></history>
           <editable-state-select class="pull-right" ng-if="!ctrl.predicate.unsaved" id="predicateState" state="ctrl.editableInEdit.state" model="ctrl.model"></editable-state-select>
         </selection-buttons>
