--- a/src/components/model/modelView.html
+++ b/src/components/model/modelView.html
@@ -9,7 +9,7 @@
 
         <editable-entity-buttons context="ctrl.model" editable-controller="ctrl">
           <a class="btn btn-default right" ng-show="ctrl.canAskForRights()" ng-href="{{ctrl.getGroup().homepage}}" target="_blank" translate>Ask for group rights</a>
-          <export ng-hide="ctrl.isEditing()" entity="ctrl.model"></export>
+          <export ng-hide="ctrl.isEditing()" entity="ctrl.model" context="ctrl.model"></export>
           <history model="ctrl.model" resource="ctrl.model" ng-hide="ctrl.isEditing()"></history>
           <editable-state-select class="pull-right" ng-if="!ctrl.model.unsaved" id="modelState" state="ctrl.editableInEdit.state" model="ctrl.model"></editable-state-select>
         </editable-entity-buttons>
