--- a/src/components/editor/searchPredicateModal.html
+++ b/src/components/editor/searchPredicateModal.html
@@ -57,7 +57,7 @@
         <div class="col-md-4 search-results">
           <ajax-loading-indicator ng-if="ctrl.loadingResults"></ajax-loading-indicator>
 
-          <search-results ng-if="!ctrl.loadingResults" items="ctrl.searchResults" exclude="ctrl.exclude" on-select="ctrl.selectItem(item)" edit-in-progress="ctrl.editInProgress">
+          <search-results ng-if="!ctrl.loadingResults" items="ctrl.searchResults" selected="ctrl.selectedItem" exclude="ctrl.exclude" on-select="ctrl.selectItem(item)" edit-in-progress="ctrl.editInProgress">
             <div><i ng-class="searchResult.glyphIconClass"></i><h5>{{searchResult | translateLabel: ctrl.model}}</h5></div>
             <p>{{searchResult.definedBy | translateLabel: ctrl.model}} <ajax-loading-indicator-small ng-if="ctrl.loadingSelection(searchResult)"></ajax-loading-indicator-small></p>
           </search-results>
