--- a/src/components/model/conceptEditorModal.html
+++ b/src/components/model/conceptEditorModal.html
@@ -62,7 +62,7 @@
       <div class="col-md-4 search-results">
         <ajax-loading-indicator ng-if="ctrl.loadingResults"></ajax-loading-indicator>
 
-        <search-results ng-if="!ctrl.loadingResults" items="ctrl.searchResults" exclude="ctrl.exclude" on-select="ctrl.selectItem(item)" edit-in-progress="ctrl.editInProgress">
+        <search-results ng-if="!ctrl.loadingResults" items="ctrl.searchResults" selected="ctrl.selection" exclude="ctrl.exclude" on-select="ctrl.selectItem(item)" edit-in-progress="ctrl.editInProgress">
           <h5>{{searchResult | translateLabel: ctrl.model}}</h5>
           <p>{{searchResult.definedBy | translateLabel: ctrl.model}}</p>
           <p ng-init="vocabularyNames = searchResult.getVocabularyNames()">
