--- a/src/components/model/searchNamespaceModal.html
+++ b/src/components/model/searchNamespaceModal.html
@@ -32,7 +32,7 @@
       <div class="col-md-6 search-results with-button">
         <ajax-loading-indicator ng-if="ctrl.loadingResults"></ajax-loading-indicator>
 
-        <search-results ng-if="!ctrl.loadingResults" items="ctrl.searchResults" exclude="ctrl.exclude" on-select="ctrl.selectItem(item)">
+        <search-results ng-if="!ctrl.loadingResults" items="ctrl.searchResults" selected="ctrl.selected" exclude="ctrl.exclude" on-select="ctrl.selectItem(item)">
           <h5>{{searchResult | translateLabel}}</h5>
           <p>{{searchResult.namespace}}</p>
         </search-results>
