--- a/src/components/model/searchReferenceDataModal.html
+++ b/src/components/model/searchReferenceDataModal.html
@@ -44,7 +44,7 @@
         <div class="col-md-4 search-results">
           <ajax-loading-indicator ng-if="ctrl.loadingResults"></ajax-loading-indicator>
 
-          <search-results ng-if="!ctrl.loadingResults" items="ctrl.searchResults" exclude="ctrl.exclude" on-select="ctrl.selectItem(item)">
+          <search-results ng-if="!ctrl.loadingResults" items="ctrl.searchResults" selected="ctrl.selectedItem" exclude="ctrl.exclude" on-select="ctrl.selectItem(item)">
             <h5>{{searchResult.title | translateValue}}</h5>
             <p>{{searchResult.description | translateValue}}</p>
             <p><span ng-repeat="group in searchResult.groups">{{group.title | translateValue}}{{$last ? '' : ', '}}</span>
