--- a/src/components/model/searchVocabularyModal.html
+++ b/src/components/model/searchVocabularyModal.html
@@ -16,7 +16,7 @@
       <div class="col-md-6 search-results">
         <ajax-loading-indicator ng-if="ctrl.loadingResults"></ajax-loading-indicator>
 
-        <search-results ng-if="!ctrl.loadingResults" items="ctrl.searchResults" exclude="ctrl.exclude" on-select="ctrl.selectItem(item)">
+        <search-results ng-if="!ctrl.loadingResults" items="ctrl.searchResults" selected="ctrl.selected" exclude="ctrl.exclude" on-select="ctrl.selectItem(item)">
           <h5>{{searchResult | translateLabel}}</h5>
         </search-results>
       </div>
