--- a/src/components/editor/addPropertiesFromClassModal.html
+++ b/src/components/editor/addPropertiesFromClassModal.html
@@ -3,7 +3,7 @@
 
   <modal-body>
     <p><span>{{'Do you want to add following properties from ' + ctrl.classType + ' class?' | translate}}</span></p>
-    <div class="checkbox" ng-repeat="property in ctrl.properties track by property.internalId.value">
+    <div class="checkbox" ng-repeat="property in ctrl.properties track by property.internalId.uri">
       <label>
         <input ng-disabled="ctrl.isExcluded(property)" type="checkbox" checklist-model="ctrl.selectedProperties" checklist-value="property" />
         <span ng-class="strike">{{property | translateLabel: ctrl.context}}</span>
