Only scroll to property when collection changes (also initially)

--- a/src/components/editor/classForm.html
+++ b/src/components/editor/classForm.html
@@ -71,7 +71,7 @@
           </accordion-heading>
 
           <accordion-body>
-            <property-view ng-if="isOpen()" property="property" class="ctrl.class" model="ctrl.model"></property-view>
+            <property-view property="property" class="ctrl.class" model="ctrl.model"></property-view>
           </accordion-body>
         </div>
       </accordion>
