--- a/src/components/editor/propertyView.html
+++ b/src/components/editor/propertyView.html
@@ -1,137 +1,139 @@
-<div class="row">
-  <div class="col-md-6">
-    <h4 translate>Property information</h4>
+<div ng-if="ctrl.isOpen()">
+  <div class="row">
+    <div class="col-md-6">
+      <h4 translate>Property information</h4>
+    </div>
+
+    <div class="col-md-6">
+      <button ng-if="ctrl.isEditing()"
+              type="button"
+              class="btn btn-default pull-right"
+              style="margin-left: 5px"
+              ng-disabled="!ctrl.property.inUnstableState"
+              ng-click="ctrl.removeProperty(ctrl.property)" uib-tooltip="{{'Delete property' | translate}}"><i class="fa fa-trash"></i></button>
+
+      <editable-state-select class="pull-right" id="{{ctrl.property.internalId + 'state'}}" state="ctrl.property.state" model="ctrl.model"></editable-state-select>
+    </div>
   </div>
 
-  <div class="col-md-6">
-    <button ng-if="ctrl.isEditing()"
-            type="button"
-            class="btn btn-default pull-right"
-            style="margin-left: 5px"
-            ng-disabled="!ctrl.property.inUnstableState"
-            ng-click="ctrl.removeProperty(ctrl.property)" uib-tooltip="{{'Delete property' | translate}}"><i class="fa fa-trash"></i></button>
+  <div class="row">
 
-    <editable-state-select class="pull-right" id="{{ctrl.property.internalId + 'state'}}" state="ctrl.property.state" model="ctrl.model"></editable-state-select>
-  </div>
-</div>
-
-<div class="row">
-
-  <div class="col-md-6">
-    <editable data-title="Class property label" context="ctrl.model">
-      <input id="{{ctrl.property.internalId + 'label'}}" class="form-control" type="text" restrict-duplicates="ctrl.otherPropertyLabels" localized-input="label" context="ctrl.model" ng-model="ctrl.property.label" />
-    </editable>
-
-    <editable ng-if="ctrl.property.isAttribute()" data-title="Range" context="ctrl.model">
-      <range-select id="{{ctrl.property.internalId + 'range'}}" range="ctrl.property.dataType"></range-select>
-    </editable>
-
-    <editable ng-if="ctrl.property.isAssociation()" data-title="Value class" link="ctrl.linkToValueClass()" context="ctrl.model">
-      <uri-select id="{{ctrl.property.internalId + 'valueClass'}}" type="class" uri="ctrl.property.valueClass" mandatory="!ctrl.property.inUnstableState" duplicate="ctrl.isConflictingValueClass" model="ctrl.model"></uri-select>
-    </editable>
-  </div>
-
-  <div class="col-md-6">
-    <editable data-title="Description" context="ctrl.model">
-      <textarea id="{{ctrl.property.internalId + 'comment'}}" class="form-control" localized-input context="ctrl.model" ng-model="ctrl.property.comment"></textarea>
-    </editable>
-  </div>
-</div>
-
-<h4 translate ng-show="ctrl.isEditing() || ctrl.property.hasOptionalMetadata()">Optional metadata</h4>
-
-<div class="row">
-  <div class="col-md-6">
-
-    <editable data-title="Class property id" context="ctrl.model">
-      <input id="{{ctrl.property.internalId + 'id'}}" class="form-control" type="text" restrict-duplicates="ctrl.otherPropertyIdentifiers" string-input="identifier" ng-trim="false" ng-model="ctrl.property.externalId" />
-    </editable>
-
-    <editable data-title="Example" context="ctrl.model">
-      <code-value-input-autocomplete reference-data="ctrl.property.referenceData" context="ctrl.model">
-        <input id="{{ctrl.property.internalId + 'example attribute'}}" class="form-control" type="text" datatype-input="ctrl.property.inputType" reference-data="ctrl.property.referenceData" ng-model="ctrl.property.example" />
-      </code-value-input-autocomplete>
-    </editable>
-
-    <editable-multiple-data-type-input data-title="Allowed values" id="{{ctrl.property.internalId + 'allowedValues'}}" input-type="ctrl.property.inputType" ng-model="ctrl.property.in" reference-data="ctrl.property.referenceData" context="ctrl.model"></editable-multiple-data-type-input>
-
-    <div class="range-input">
-      <editable data-title="Min length" context="ctrl.model">
-        <input id="{{ctrl.property.internalId + 'minLength'}}" min-input max="ctrl.property.maxLength" class="form-control" type="number" ng-model="ctrl.property.minLength" />
+    <div class="col-md-6">
+      <editable data-title="Class property label" context="ctrl.model">
+        <input id="{{ctrl.property.internalId + 'label'}}" class="form-control" type="text" restrict-duplicates="ctrl.otherPropertyLabels" localized-input="label" context="ctrl.model" ng-model="ctrl.property.label" />
       </editable>
 
-      <editable data-title="Max length" context="ctrl.model">
-        <input id="{{ctrl.property.internalId + 'maxLength'}}" max-input min="ctrl.property.minLength" class="form-control" type="number" ng-model="ctrl.property.maxLength" />
+      <editable ng-if="ctrl.property.isAttribute()" data-title="Range" context="ctrl.model">
+        <range-select id="{{ctrl.property.internalId + 'range'}}" range="ctrl.property.dataType"></range-select>
+      </editable>
+
+      <editable ng-if="ctrl.property.isAssociation()" data-title="Value class" link="ctrl.linkToValueClass()" context="ctrl.model">
+        <uri-select id="{{ctrl.property.internalId + 'valueClass'}}" type="class" uri="ctrl.property.valueClass" mandatory="!ctrl.property.inUnstableState" duplicate="ctrl.isConflictingValueClass" model="ctrl.model"></uri-select>
       </editable>
     </div>
 
-    <editable-multiple-uri-select ng-if="ctrl.property.isAssociation()" id="classIn" type="class" ng-model="ctrl.property.classIn" model="ctrl.model" data-title="{{'Class type'}}"></editable-multiple-uri-select>
-  </div>
-
-  <div class="col-md-6">
-
-    <editable ng-if="ctrl.property.isAttribute()" data-title="Pattern" context="ctrl.model">
-      <input id="{{ctrl.property.internalId + 'pattern'}}" class="form-control" type="text" ng-model="ctrl.property.pattern" />
-    </editable>
-
-    <autocomplete ng-if="ctrl.property.isAssociation()" datasource="ctrl.stemDatasource">
-      <editable data-title="URI stem" context="ctrl.model">
-        <input id="{{ctrl.property.internalId + 'stem'}}" uri-input="stem" model="ctrl.model" class="form-control" type="text" ng-model="ctrl.property.stem" />
-      </editable>
-    </autocomplete>
-
-    <editable data-title="Default value" context="ctrl.model">
-      <code-value-input-autocomplete reference-data="ctrl.property.referenceData" context="ctrl.model">
-        <input id="{{ctrl.property.internalId + 'default value'}}" class="form-control" type="text" datatype-input="ctrl.property.inputType" reference-data="ctrl.property.referenceData" ng-model="ctrl.property.defaultValue" />
-      </code-value-input-autocomplete>
-    </editable>
-
-    <editable data-title="Fixed value" context="ctrl.model">
-      <code-value-input-autocomplete reference-data="ctrl.property.referenceData" context="ctrl.model">
-        <input id="{{ctrl.property.internalId + 'hasValue'}}" class="form-control" type="text" datatype-input="ctrl.property.inputType" reference-data="ctrl.property.referenceData" ng-model="ctrl.property.hasValue" />
-      </code-value-input-autocomplete>
-    </editable>
-
-    <div class="range-input">
-      <editable data-title="Min count" context="ctrl.model">
-        <input id="{{ctrl.property.internalId + 'minCount'}}" placeholder="0" min-input max="ctrl.property.maxCount" class="form-control" type="number" ng-model="ctrl.property.minCount" />
-      </editable>
-
-      <editable data-title="Max count" context="ctrl.model">
-        <input id="{{ctrl.property.internalId + 'maxCount'}}" placeholder="*" max-input min="ctrl.property.minCount" class="form-control" type="number" ng-model="ctrl.property.maxCount" />
+    <div class="col-md-6">
+      <editable data-title="Description" context="ctrl.model">
+        <textarea id="{{ctrl.property.internalId + 'comment'}}" class="form-control" localized-input context="ctrl.model" ng-model="ctrl.property.comment"></textarea>
       </editable>
     </div>
   </div>
-</div>
 
-<div class="row">
-  <div class="col-md-12">
-    <editable-reference-data-select model="ctrl.model" reference-data="ctrl.property.referenceData"></editable-reference-data-select>
+  <h4 translate ng-show="ctrl.isEditing() || ctrl.property.hasOptionalMetadata()">Optional metadata</h4>
+
+  <div class="row">
+    <div class="col-md-6">
+
+      <editable data-title="Class property id" context="ctrl.model">
+        <input id="{{ctrl.property.internalId + 'id'}}" class="form-control" type="text" restrict-duplicates="ctrl.otherPropertyIdentifiers" string-input="identifier" ng-trim="false" ng-model="ctrl.property.externalId" />
+      </editable>
+
+      <editable data-title="Example" context="ctrl.model">
+        <code-value-input-autocomplete reference-data="ctrl.property.referenceData" context="ctrl.model">
+          <input id="{{ctrl.property.internalId + 'example attribute'}}" class="form-control" type="text" datatype-input="ctrl.property.inputType" reference-data="ctrl.property.referenceData" ng-model="ctrl.property.example" />
+        </code-value-input-autocomplete>
+      </editable>
+
+      <editable-multiple-data-type-input data-title="Allowed values" id="{{ctrl.property.internalId + 'allowedValues'}}" input-type="ctrl.property.inputType" ng-model="ctrl.property.in" reference-data="ctrl.property.referenceData" context="ctrl.model"></editable-multiple-data-type-input>
+
+      <div class="range-input">
+        <editable data-title="Min length" context="ctrl.model">
+          <input id="{{ctrl.property.internalId + 'minLength'}}" min-input max="ctrl.property.maxLength" class="form-control" type="number" ng-model="ctrl.property.minLength" />
+        </editable>
+
+        <editable data-title="Max length" context="ctrl.model">
+          <input id="{{ctrl.property.internalId + 'maxLength'}}" max-input min="ctrl.property.minLength" class="form-control" type="number" ng-model="ctrl.property.maxLength" />
+        </editable>
+      </div>
+
+      <editable-multiple-uri-select ng-if="ctrl.property.isAssociation()" id="classIn" type="class" ng-model="ctrl.property.classIn" model="ctrl.model" data-title="{{'Class type'}}"></editable-multiple-uri-select>
+    </div>
+
+    <div class="col-md-6">
+
+      <editable ng-if="ctrl.property.isAttribute()" data-title="Pattern" context="ctrl.model">
+        <input id="{{ctrl.property.internalId + 'pattern'}}" class="form-control" type="text" ng-model="ctrl.property.pattern" />
+      </editable>
+
+      <autocomplete ng-if="ctrl.property.isAssociation()" datasource="ctrl.stemDatasource">
+        <editable data-title="URI stem" context="ctrl.model">
+          <input id="{{ctrl.property.internalId + 'stem'}}" uri-input="stem" model="ctrl.model" class="form-control" type="text" ng-model="ctrl.property.stem" />
+        </editable>
+      </autocomplete>
+
+      <editable data-title="Default value" context="ctrl.model">
+        <code-value-input-autocomplete reference-data="ctrl.property.referenceData" context="ctrl.model">
+          <input id="{{ctrl.property.internalId + 'default value'}}" class="form-control" type="text" datatype-input="ctrl.property.inputType" reference-data="ctrl.property.referenceData" ng-model="ctrl.property.defaultValue" />
+        </code-value-input-autocomplete>
+      </editable>
+
+      <editable data-title="Fixed value" context="ctrl.model">
+        <code-value-input-autocomplete reference-data="ctrl.property.referenceData" context="ctrl.model">
+          <input id="{{ctrl.property.internalId + 'hasValue'}}" class="form-control" type="text" datatype-input="ctrl.property.inputType" reference-data="ctrl.property.referenceData" ng-model="ctrl.property.hasValue" />
+        </code-value-input-autocomplete>
+      </editable>
+
+      <div class="range-input">
+        <editable data-title="Min count" context="ctrl.model">
+          <input id="{{ctrl.property.internalId + 'minCount'}}" placeholder="0" min-input max="ctrl.property.maxCount" class="form-control" type="number" ng-model="ctrl.property.minCount" />
+        </editable>
+
+        <editable data-title="Max count" context="ctrl.model">
+          <input id="{{ctrl.property.internalId + 'maxCount'}}" placeholder="*" max-input min="ctrl.property.minCount" class="form-control" type="number" ng-model="ctrl.property.maxCount" />
+        </editable>
+      </div>
+    </div>
   </div>
-</div>
-
-<div ng-show="ctrl.showAdditionalInformation || ctrl.isEditing()">
-  <h4 translate>Additional information</h4>
 
   <div class="row">
     <div class="col-md-12">
-      <editable data-title="Editorial note" context="ctrl.model">
-        <textarea id="editorialNote" class="form-control" localized-input="free" context="ctrl.model" ng-model="ctrl.property.editorialNote"></textarea>
-      </editable>
+      <editable-reference-data-select model="ctrl.model" reference-data="ctrl.property.referenceData"></editable-reference-data-select>
     </div>
   </div>
+
+  <div ng-show="ctrl.showAdditionalInformation || ctrl.isEditing()">
+    <h4 translate>Additional information</h4>
+
+    <div class="row">
+      <div class="col-md-12">
+        <editable data-title="Editorial note" context="ctrl.model">
+          <textarea id="editorialNote" class="form-control" localized-input="free" context="ctrl.model" ng-model="ctrl.property.editorialNote"></textarea>
+        </editable>
+      </div>
+    </div>
+  </div>
+
+  <h4 translate>Reusable predicate</h4>
+
+  <uib-accordion>
+    <uib-accordion-group is-open="predicateOpen">
+
+      <uib-accordion-heading>
+        <span accordion-chevron is-open="predicateOpen">{{ctrl.predicateName}}</span>
+      </uib-accordion-heading>
+
+      <property-predicate-view ng-if="predicateOpen" predicate="ctrl.property.predicate" model="ctrl.model"></property-predicate-view>
+
+    </uib-accordion-group>
+  </uib-accordion>
 </div>
-
-<h4 translate>Reusable predicate</h4>
-
-<uib-accordion>
-  <uib-accordion-group is-open="predicateOpen">
-
-    <uib-accordion-heading>
-      <span accordion-chevron is-open="predicateOpen">{{ctrl.predicateName}}</span>
-    </uib-accordion-heading>
-
-    <property-predicate-view ng-if="predicateOpen" predicate="ctrl.property.predicate" model="ctrl.model"></property-predicate-view>
-
-  </uib-accordion-group>
-</uib-accordion>
