--- a/src/components/model/conceptForm.html
+++ b/src/components/model/conceptForm.html
@@ -22,27 +22,27 @@
       <button type="button" class="btn btn-default btn-sm" ng-click="ctrl.selectBroaderConcept()" translate>Choose broader concept</button>
     </div>
 
-    <div ng-if="ctrl.schemes.length > 0 && !ctrl.isSchemeEditable()" class="editable-wrap form-group">
+    <div ng-if="ctrl.vocabularyNames.length > 0 && !ctrl.isConceptEditable()" class="editable-wrap form-group">
       <editable-label data-title="'Vocabulary'"></editable-label>
       <div ng-repeat="vocabularyName in ctrl.vocabularyNames">
-        <a ng-if="vocabularyName.href" ng-href="{{vocabularyName.href}}">{{vocabularyName.getLocalizedName(ctrl.localizer)}}<span ng-show="!$last">, </span></a>
-        <span ng-if="!scheme.href">{{vocabularyName.getLocalizedName(ctrl.localizer)}}<span ng-show="!$last">, </span></span>
+        <a ng-if="vocabularyName.href" ng-href="{{vocabularyName.href}}">{{vocabularyName.getLocalizedName(ctrl.localizer, ctrl.gettextCatalog)}}<span ng-show="!$last">, </span></a>
+        <span ng-if="!vocabularyName.href">{{vocabularyName.getLocalizedName(ctrl.localizer)}}<span ng-show="!$last">, </span></span>
       </div>
     </div>
 
-    <div ng-if="ctrl.isSchemeEditable()">
+    <div ng-if="ctrl.isConceptEditable()">
 
       <div class="editable-wrap form-group">
         <editable-label data-title="'Vocabulary'" input-id="vocabulary" required="'true'"></editable-label>
         <div ng-if="ctrl.isEditing()">
           <select id="vocabulary" class="form-control" required ng-model="ctrl.concept.vocabulary"
-                  ng-options="(vocabulary | translateLabel: ctrl.model) for vocabulary in ctrl.model.vocabularies | filter: !vocabulary.local">
+                  ng-options="(vocabulary.title | translateValue: ctrl.model) for vocabulary in ctrl.model.vocabularies | filter: !vocabulary.local">
           </select>
         </div>
 
         <div ng-if="!ctrl.isEditing()">
           <span ng-if="ctrl.concept.vocabulary.local" translate>Internal vocabulary</span>
-          <a ng-if="!ctrl.concept.vocabulary.local" ng-href="{{ctrl.concept.vocabulary.href}}">{{ctrl.concept.vocabulary | translateLabel: ctrl.model}}</a>
+          <a ng-if="!ctrl.concept.vocabulary.local" ng-href="{{ctrl.concept.vocabulary.href}}">{{ctrl.concept.vocabulary.title | translateValue: ctrl.model}}</a>
         </div>
       </div>
     </div>
