--- a/src/components/editor/searchClassModal.html
+++ b/src/components/editor/searchClassModal.html
@@ -53,7 +53,7 @@
         </div>
 
         <div class="col-md-4 search-selection">
-          <class-form ng-if="!ctrl.isSelectionExternalEntity() && ctrl.selection" class="ctrl.selection" old-class="ctrl.selection" model="ctrl.model"></class-form>
+          <class-form ng-if="!ctrl.isSelectionExternalEntity() && ctrl.selection" class="ctrl.selection" old-class="ctrl.selection" model="ctrl.model" open-property-id="openPropertyId"></class-form>
 
           <div ng-if="ctrl.isSelectionExternalEntity()">
 
