Pass required as parameter to multiple language select

--- a/src/components/group/addModelModal.html
+++ b/src/components/group/addModelModal.html
@@ -9,7 +9,7 @@
       </div>
     </editable>
 
-    <editable-multiple-language-select title="Model languages" id="modelLanguage" ng-model="ctrl.language"></editable-multiple-language-select>
+    <editable-multiple-language-select title="Model languages" id="modelLanguage" ng-model="ctrl.language" required="true"></editable-multiple-language-select>
 
     <editable data-title="{{ctrl.type + ' label' | capitalize}}">
       <div class="input-group input-group-md">
