--- a/src/components/editor/propertyView.html
+++ b/src/components/editor/propertyView.html
@@ -28,7 +28,7 @@
                              range="ctrl.property.dataType">
       </editable-range-select>
 
-      <editable-multiple-language-select ng-if="ctrl.property.dataType === 'rdf:langString'"
+      <editable-multiple-language-select ng-if="ctrl.model.isOfType('profile') && ctrl.property.dataType === 'rdf:langString'"
                                          title="Allowed languages"
                                          id="dataTypeAllowedLanguage"
                                          ng-model="ctrl.property.language"
