Test that groups are navigable

--- a/src/components/frontPage.html
+++ b/src/components/frontPage.html
@@ -31,7 +31,7 @@
     </div>
 
     <div class="col-md-6">
-      <div class="frontpage-panel">
+      <div id="browse-panel" class="frontpage-panel">
         <div class="iow-panel-heading"><h3 translate>Browse</h3></div>
         <div class="frontpage-panel__body">
           <ul class="selectable-panel__list">
