--- a/src/components/navigation/navigationBar.html
+++ b/src/components/navigation/navigationBar.html
@@ -8,14 +8,14 @@
       <a ng-click="ctrl.language = language.code">{{language.name}}</a>
     </li>
     <li ng-if="!ctrl.getUser().isLoggedIn()">
-      <a ng-click="ctrl.openLogin()" translate>Login</a>
+      <a id="login" ng-click="ctrl.openLogin()" translate>Login</a>
     </li>
     <li ng-if="ctrl.getUser().isLoggedIn()">
       <div class="btn-group navbar-btn" uib-dropdown is-open="status.isopen">
         <button class="btn btn-default navbar-btn" uib-dropdown-toggle>{{ctrl.getUser().name}} <span class="caret"></span></button>
         <ul class="dropdown-menu" role="menu">
           <li role="menuitem"><a ng-href="#/user" translate>User details</a></li>
-          <li role="menuitem"><a ng-click="ctrl.logout()" translate>Logout</a></li>
+          <li role="menuitem"><a id="logout" ng-click="ctrl.logout()" translate>Logout</a></li>
         </ul>
       </div>
     </li>
