Use data-title attribute instead of title

--- a/src/components/editor/propertyView.html
+++ b/src/components/editor/propertyView.html
@@ -29,7 +29,7 @@
       </editable-range-select>
 
       <editable-multiple-language-select ng-if="ctrl.model.isOfType('profile') && ctrl.property.dataType === 'rdf:langString'"
-                                         title="Allowed languages"
+                                         data-title="Allowed languages"
                                          id="dataTypeAllowedLanguage"
                                          ng-model="ctrl.property.language"
                                          required="false">
