--- a/src/components/model/referenceDataView.html
+++ b/src/components/model/referenceDataView.html
@@ -1,9 +1,9 @@
 <h4 ng-if="ctrl.title">{{ctrl.title | translate}}</h4>
 
-<non-editable title="Reference data URI" value="ctrl.referenceData.id" context="ctrl.context"></non-editable>
-<non-editable title="Reference data name" value="ctrl.referenceData.title" context="ctrl.context"></non-editable>
-<non-editable title="Description" value="ctrl.referenceData.description" context="ctrl.context"></non-editable>
-<non-editable title="Creator" value="ctrl.referenceData.creator" context="ctrl.context"></non-editable>
+<non-editable data-title="Reference data URI" value="ctrl.referenceData.id" context="ctrl.context"></non-editable>
+<non-editable data-title="Reference data name" value="ctrl.referenceData.title" context="ctrl.context"></non-editable>
+<non-editable data-title="Description" value="ctrl.referenceData.description" context="ctrl.context"></non-editable>
+<non-editable data-title="Creator" value="ctrl.referenceData.creator" context="ctrl.context"></non-editable>
 
 <br />
 
