--- a/src/components/model/searchReferenceDataModal.html
+++ b/src/components/model/searchReferenceDataModal.html
@@ -55,7 +55,7 @@
 
         <div class="col-md-4 search-selection">
           <div ng-if="!ctrl.isSelectionFormData() && ctrl.selection">
-            <reference-data-view title="Reference data information" context="ctrl.model" reference-data="ctrl.selection" show-codes="true"></reference-data-view>
+            <reference-data-view data-title="Reference data information" context="ctrl.model" reference-data="ctrl.selection" show-codes="true"></reference-data-view>
           </div>
 
           <div ng-if="ctrl.isSelectionFormData()">
