--- a/src/components/user/user.html
+++ b/src/components/user/user.html
@@ -6,10 +6,10 @@
     <form>
       <div class="top-actions"></div>
       <div class="col-md-12">
-        <non-editable title="User login" value="ctrl.user.login"></non-editable>
-        <non-editable title="User name" value="ctrl.user.name"></non-editable>
-        <non-editable title="Created at" value="ctrl.user.createdAt"></non-editable>
-        <non-editable title="Modified at" value="ctrl.user.modifiedAt"></non-editable>
+        <non-editable data-title="User login" value="ctrl.user.login"></non-editable>
+        <non-editable data-title="User name" value="ctrl.user.name"></non-editable>
+        <non-editable data-title="Created at" value="ctrl.user.createdAt"></non-editable>
+        <non-editable data-title="Modified at" value="ctrl.user.modifiedAt"></non-editable>
 
         <div class="editable-wrap">
           <label translate>Member groups</label>
