--- a/src/components/editor/searchConceptModal.html
+++ b/src/components/editor/searchConceptModal.html
@@ -56,7 +56,7 @@
 
             <div ng-if="ctrl.isSelectionNewConceptData()">
 
-              <editable title="Vocabulary" context="ctrl.context" autofocus>
+              <editable data-title="Vocabulary" context="ctrl.context" autofocus>
                 <select id="vocabularySelection" class="form-control" required ng-model="ctrl.selection.vocabulary"
                         ng-options="ctrl.translateVocabulary(vocabulary) for vocabulary in ctrl.selectableVocabularies">
                 </select>
