--- a/src/components/editor/editableMultiple.html
+++ b/src/components/editor/editableMultiple.html
@@ -1,10 +1,12 @@
 <div ng-show="ctrl.ngModel.length > 0 || ctrl.isEditing()" class="editable-wrap form-group">
   <editable-label input-id="ctrl.id" ng-show="ctrl.title" data-title="ctrl.title"></editable-label>
 
-  <span ng-if="!ctrl.isEditing()" ng-repeat="value in ctrl.ngModel">
-    <span ng-if="!ctrl.link">{{ctrl.format(value)}}<span ng-if="!$last">, </span></span>
-    <a ng-if="ctrl.link" ng-href="{{ctrl.link(value)}}">{{ctrl.format(value)}}<span ng-if="!$last">, </span></a>
-  </span>
+  <div ng-if="!ctrl.isEditing()" class="content">
+    <span ng-repeat="value in ctrl.ngModel">
+      <span ng-if="!ctrl.link">{{ctrl.format(value)}}<span ng-if="!$last">, </span></span>
+      <a ng-if="ctrl.link" ng-href="{{ctrl.link(value)}}">{{ctrl.format(value)}}<span ng-if="!$last">, </span></a>
+    </span>
+  </div>
 
   <div ng-show="ctrl.isEditing()">
     <div class="form-control multi-input" drag-sortable="ctrl.ngModel">
